##### Version 0.5.4
* Add num.trees option to predict()

##### Version 0.5.3
* Bug fixes

##### Version 0.5.2
* Use unadjusted p-value for 2 categories in maxstat splitting

##### Version 0.5.1
* Bug fixes

##### Version 0.5.0
* Add Windows multithreading support for new toolchain
* Add splitting by maximally selected rank statistics for survival and regression forests
* Faster method for unordered factor splitting
* Add p-values for variable importance
* Runtime improvement for regression forests on classification data
* Bug fixes

##### Version 0.4.0
* Reduce memory usage of savest forest objects (changed child.nodeIDs interface)
* Add keep.inbag option to track in-bag counts
* Add option sample.fraction for fraction of sampled observations
* Add tree-wise split.select.weights
* Add predict.all option in predict() to get individual predictions for each tree for classification and regression
* Add case-specific random forests
* Add case weights (weighted bootstrapping or subsampling)
* Remove tuning functions, please use mlr or caret
* Catch error of outdated gcc not supporting C++11 completely
* Bug fixes

##### Version 0.3.0
* Allow the user to interrupt computation from R
* Transpose classification.table and rename to confusion.matrix
* Respect R seed for prediction
* Memory improvements for variable importance computation
* Fix bug: Probability prediction for single observations
* Fix bug: Results not identical when using alternative interface

##### Version 0.2.7 
* Small fixes for Solaris compiler

##### Version 0.2.6 
* Add C-index splitting
* Fix NA SNP handling

##### Version 0.2.5 
* Fix matrix and gwaa alternative survival interface
* Version submitted to JSS

##### Version 0.2.4 
* Small changes in documentation

##### Version 0.2.3 
* Preallocate memory for splitting

##### Version 0.2.2 
* Remove recursive splitting

##### Version 0.2.1 
* Allow matrix as input data in R version

##### Version 0.2.0 
* Fix prediction of classification forests in R
