@@ -1,4 +1,5 @@
 ##### Version 0.5.4
+* Set write.forest=TRUE by default
 * Add num.trees option to predict()
 
 ##### Version 0.5.3
